Understand better I think giving it a rest for now

--- a/ShoppingList/index.html
+++ b/ShoppingList/index.html
@@ -11,7 +11,7 @@
   <form id="new-item">
       <label for="shop-item">Add a new item</label>
       <input id="shop-item" name="shop-item" type="text" placeholder="e.g., broccoli"/>
-      <button type="submit">Add Item</button>
+      <button id="add-item" type="submit">Add Item</button>
   </form>
 
   </body>
